scripts/tools/ingress_np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-oss-restsim-ingress-allow-np
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-oss-restsim-release
  policyTypes:
    - Ingress
  ingress:
    # ALLOW traffic from ingress
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
